--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-stormpath": "^4.0.0",
     "massive": "^5.7.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
