--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-stormpath": "^4.0.0",
     "massive": "^5.7.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "rethinkdb": "^2.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,6 +32,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-
   "proxy": "http://localhost:4001"
 }
